--- a/assets/style.css
+++ b/assets/style.css
@@ -5,3 +5,11 @@ html {
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
+
+h1 {
+    text-align: center;
+}
+
+p {
+    text-align: center;
+}
